# tokenmonkey

./: .gitignore  404.html  Anchor.toml  CNAME  GTM-STRATEGY.md  LAUNCH-CHECKLIST.md  LAUNCH-THREAD.md  TUTORIAL.md  WAYFINDER-OUTREACH.md  index.html  package-lock.json  package.json  tsconfig.anchor.json  vite.config.ts
.claude/: launch.json
assets/: index-1v4M2hJc.js  index-B1PftRyj.js  index-Bd_O7S7r.css  index-BeiJJOBo.js  index-BzntHPlO.js  index-C-2UER-I.js  index-CMXqPH3F.js  index-Cp9cHesP.js  index-CtIbaik5.js  index-D4JdX-1v.css  index-D76KID91.js  index-DIJHbMn8.js  index-DIKUkXTx.js  index-DJKCnOBP.css  index-DWCt4zfy.js  index-DkaIkY8U.js  index-Dl5wCqcu.js  index-DottL4PZ.js  index-Dz-6reM9.js  index-N2nLkfc6.js  index-VZ32Ftew.js  index-eZv-FHwL.js  index-tzemx34T.css  index-wZhIoVi6.js  index-zrS1oBCz.js
bot/: .env.example  .gitignore  package-lock.json  package.json  tsconfig.json
contracts/: TOKENOMICS.json  deploy-all.sh
demo-agent/: .env.example  package-lock.json  package.json  tsconfig.json
indexer/: .env.example  package.json  tsconfig.json
marketing/: wayfinder-outreach.md
mcp-server/: package-lock.json  package.json  server.json  (+1 more)
programs/tokenmonkey/: Cargo.toml
programs/tokenmonkey/src/: constants.rs  errors.rs  events.rs  lib.rs  skill.rs  state.rs
programs/tokenmonkey/src/games/: coinflip.rs  dice.rs  mod.rs
programs/tokenmonkey/src/instructions/: accept_challenge.rs  cancel_challenge.rs  claim_winnings.rs  create_challenge.rs  expire_stale.rs  initialize.rs  mod.rs  register_agent.rs  resolve_game.rs  update_config.rs
(+84 files in other folders)
